--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Thật là sai lầm và mệt mỏi</h1>
+    <h1>Thật là sai lầm và mệt mỏi, không biết gì luôn</h1>
     <div class="contain">
         <div class="header">
             <a href="#">
